--- a/index.html
+++ b/index.html
@@ -92,5 +92,6 @@
 
   <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
   <script src="js/script.js"></script>
+  <script src="js/script2.js"></script>
     </body>
 </html>
