--- a/index.html
+++ b/index.html
@@ -102,7 +102,8 @@
     <div class="canvy">
       <canvas id="myChart" width="100px" height="100px"></canvas>
       <p id ="pesocheaumenta"></p>
-      <span><span id ="spanesorazionatoingiorni"></span>kg/mese</span>
+
+      <span><span id ="pesorazionatoingiorni"></span>kg/mese</span>
     </div>
     <div class="containerpie">
       <canvas id="myChart1"></canvas>
