--- a/index.html
+++ b/index.html
@@ -86,12 +86,12 @@
         </div>
         <div class="totkcal" >
           <div class="tot-chilopage">
-            <h2>Chilocalorie Totali perdere peso:{{Caloriemeno}}</h2>
+            <!-- <h2>Chilocalorie Totali perdere peso:{{Caloriemeno}}</h2>
             <h2>Chilocalorie Totali mantenere peso:{{Calorie}}</h2>
-            <h2>Chilocalorie Totali aumentare massa:{{Calorieaumento}}</h2>
+            <h2>Chilocalorie Totali aumentare massa:{{Calorieaumento}}</h2> -->
             <h2>BMI(Indice massa corporea):{{Bmi}} %</h2>
-            <h2>Il tuo peso ideale e':{{PesoIdeale}} </h2>
-            <h2> secondo i dati che ci hai fornito ,ti consigliamo di <span id="pesodasistemare"></span> kg</h2>
+            <h2>Il tuo peso ideale e':{{PesoIdeale}} kg </h2>
+            <h2> secondo i dati che ci hai fornito ,ti consigliamo di <span id="pesodasistemare"></span> </h2>
             <p><span id="percCarb"></span> Kcal =  Carboidrati</p>
             <p><span id="percGrassi"></span> Kcal =  Grassi</p>
             <p><span id="percProte"></span> Kcal =  Proteine</p>
