--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <h2>Chilocalorie Totali mantenere peso:{{Calorie}}</h2>
             <h2>Chilocalorie Totali aumentare massa:{{Calorieaumento}}</h2> -->
             <h2>BMI(Indice massa corporea):<span id="bmi"></span> %</h2>
-            <h2>Il tuo peso ideale e': {{PesoIdeale}} kg </h2>
+            <h2>Il tuo peso ideale e': <span id="pesoIdeale"></span> kg </h2>
             <h2> secondo i dati che ci hai fornito ,ti consigliamo di <span id="pesodasistemare"></span> </h2>
             <p><span id="percCarb"></span> Kcal =  Carboidrati</p>
             <p><span id="percGrassi"></span> Kcal =  Grassi</p>
