--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <div class="canvy">
           <canvas id="myChart" width="100px" height="100px"></canvas>
           <p id ="pesocheaumenta"></p>
-          <span><span id ="pesorazionatoingiorni"></span>kg/mese</span>
+          <span class="pesoraz"><span id ="pesorazionatoingiorni"></span>kg/mese</span>
         </div>
         <div class="containerpie">
           <canvas id="myChart1"></canvas>
