--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
         </div>
         <div class="containerpie">
           <canvas id="myChart1"></canvas>
-          <p><span id="percCarb"></span> Kcal =  Carboidrati</p>
+          <!-- <p><span id="percCarb"></span> Kcal =  Carboidrati</p>
           <p><span id="percGrassi"></span> Kcal =  Grassi</p>
-          <p><span id="percProte"></span> Kcal =  Proteine</p>
+          <p><span id="percProte"></span> Kcal =  Proteine</p> -->
         </div>
       </div>
       <!-- diagrammi fine -->
